--- a/arch/x86/configs/p75-kenny_defconfig
+++ b/arch/x86/configs/p75-kenny_defconfig
@@ -219,6 +219,7 @@ CONFIG_INPUT_PCSPKR=y
 CONFIG_NVRAM=y
 CONFIG_HPET=y
 CONFIG_HANGCHECK_TIMER=y
+# CONFIG_HMC_DRV is not set
 # CONFIG_I2C_COMPAT is not set
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_SENSORS_CORETEMP=y
@@ -431,6 +432,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=30
 CONFIG_PANIC_TIMEOUT=120
+CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
