x86: Toshiba P75: make usb-storage a module
Recent kernel commit changes order of discovered disks, breaking boot

--- a/arch/x86/configs/p75-kenny_defconfig
+++ b/arch/x86/configs/p75-kenny_defconfig
@@ -285,8 +285,8 @@ CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_ACM=y
 CONFIG_USB_PRINTER=y
 CONFIG_USB_TMC=y
-CONFIG_USB_STORAGE=y
-CONFIG_USB_UAS=y
+CONFIG_USB_STORAGE=m
+CONFIG_USB_UAS=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CONSOLE=y
 CONFIG_USB_SERIAL_GENERIC=y
@@ -320,6 +320,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_ACPI_WMI=y
 CONFIG_ACPI_TOSHIBA=y
 CONFIG_TOSHIBA_BT_RFKILL=y
+CONFIG_TOSHIBA_HAPS=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_POWERCAP=y
 CONFIG_INTEL_RAPL=y
