--- a/arch/x86/configs/p75-kenny_defconfig
+++ b/arch/x86/configs/p75-kenny_defconfig
@@ -285,7 +285,11 @@ CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_ACM=y
 CONFIG_USB_PRINTER=y
 CONFIG_USB_TMC=y
-CONFIG_USB_STORAGE=m
+CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_USBAT=y
+CONFIG_USB_STORAGE_ONETOUCH=y
+CONFIG_USB_STORAGE_CYPRESS_ATACB=y
+CONFIG_USB_STORAGE_ENE_UB6250=y
 CONFIG_USB_UAS=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CONSOLE=y
@@ -313,6 +317,7 @@ CONFIG_USB_SERIAL_QCAUX=y
 CONFIG_USB_SERIAL_QUALCOMM=y
 CONFIG_USB_SERIAL_SIERRAWIRELESS=y
 CONFIG_USB_SERIAL_OPTION=y
+CONFIG_USB_SISUSBVGA=y
 CONFIG_MMC=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_REALTEK_PCI=y
