--- a/arch/x86/configs/p75-kenny_defconfig
+++ b/arch/x86/configs/p75-kenny_defconfig
@@ -61,8 +61,10 @@ CONFIG_EFI=y
 CONFIG_EFI_STUB=y
 CONFIG_HZ_1000=y
 CONFIG_PHYSICAL_ALIGN=0x1000000
+CONFIG_LEGACY_VSYSCALL_NONE=y
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="ro root=/dev/sda2"
+# CONFIG_MODIFY_LDT_SYSCALL is not set
 CONFIG_HIBERNATION=y
 CONFIG_PM_STD_PARTITION="/dev/sdb1"
 # CONFIG_ACPI_REV_OVERRIDE_POSSIBLE is not set
@@ -102,7 +104,7 @@ CONFIG_UNIX_DIAG=y
 CONFIG_INET=y
 CONFIG_SYN_COOKIES=y
 CONFIG_NET_IPVTI=y
-CONFIG_INET_UDP_DIAG=y
+# CONFIG_INET_DIAG is not set
 # CONFIG_IPV6 is not set
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_ADVANCED is not set
@@ -279,6 +281,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PCSPKR=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_LEGACY_PTYS is not set
+# CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 # CONFIG_HW_RANDOM is not set
 CONFIG_NVRAM=y
@@ -500,6 +503,7 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_LATENCYTOP=y
 # CONFIG_FTRACE is not set
 CONFIG_STRICT_DEVMEM=y
+CONFIG_IO_STRICT_DEVMEM=y
 # CONFIG_EARLY_PRINTK is not set
 # CONFIG_DEBUG_RODATA_TEST is not set
 CONFIG_DEBUG_SET_MODULE_RONX=y
