--- a/arch/x86/configs/p75-kenny_defconfig
+++ b/arch/x86/configs/p75-kenny_defconfig
@@ -101,7 +101,9 @@ CONFIG_INET=y
 CONFIG_SYN_COOKIES=y
 CONFIG_NET_IPVTI=y
 # CONFIG_INET_DIAG is not set
-# CONFIG_IPV6 is not set
+CONFIG_IPV6_MIP6=y
+# CONFIG_IPV6_SIT is not set
+CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_ADVANCED is not set
 CONFIG_NF_CONNTRACK=y
@@ -131,6 +133,9 @@ CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP_NF_RAW=y
+# CONFIG_NF_CONNTRACK_IPV6 is not set
+# CONFIG_NF_REJECT_IPV6 is not set
+# CONFIG_IP6_NF_IPTABLES is not set
 CONFIG_BRIDGE=y
 CONFIG_LLC2=y
 CONFIG_VSOCKETS=y
